# KrishiGPT

./: .gitignore  README.md  agent.py  env.example  pyproject.toml  requirements.txt
scripts/: getlanlon.py  getweatherapi.py  response_agent.py
src/.adk/: session.db
src/krishigpt/: __init__.py  __main__.py  agent.py  config.py  evalset03ac12.evalset.json
src/krishigpt/.adk/: session.db
src/krishigpt/agents/: __init__.py  farming_agent.py  government_agent.py  market_agent.py  response_agent.py  router_agent.py  translation_agent.py  weather_agent.py
src/krishigpt/agents/.adk/: session.db
src/krishigpt/tools/: __init__.py  location.py  market.py  sarvam.py  translation.py  weather.py
