[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krishigpt"
version = "0.1.0"
description = "AI-powered assistant for farming and weather in Indian languages."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
  "google-adk>=0.5.0",
  "python-dotenv>=1.0.0",
  "sarvamai>=0.1.0",
  "google-generativeai>=0.3.1",
  "requests>=2.31.0",
  "openai>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
